# fella

./: .gitignore  Cargo.toml  LICENSE  flake.nix
src/: main.rs
src/client/: main.rs
src/client/commands/: mod.rs  test.rs
src/lib/: command.rs  error.rs  handler.rs  lib.rs  manager.rs  util.rs
