[package]
name = "fella"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
dotenv = "0.15.0"
phf = { version = "0.11.2", features = ["macros"] }
phf_codegen = "0.11.2"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "full"] }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "fella"
path = "src/client/main.rs"
