[package]
name = "fella"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
serenity = { version = "0.12.2", features = ["cache", "client", "gateway", "model", "simd_json", "tokio_task_builder"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "full"] }

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "fella"
path = "src/client/main.rs"
